--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,22 +12,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Conda
+      - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          auto-update-conda: true
           python-version: 3.10
-          environment-file: conda.yaml
-          activate-environment: iris_env
           auto-activate-base: false
 
-      - name: Run MLflow
+      - name: Create Conda Environment Manually
+        shell: bash -l {0}
+        run: |
+          conda env create -f conda.yaml
+          conda activate iris_env
+          pip install mlflow
+
+      - name: Run MLflow Project
         shell: bash -l {0}
         run: |
           conda activate iris_env
           mlflow run .
 
-      - name: Upload artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-artifacts
