--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,36 +8,26 @@ on:
 jobs:
   train:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          auto-update-conda: true
-          environment-file: conda.yaml
-          activate-environment: iris_env
-          auto-activate-base: false
           python-version: 3.10
+          auto-activate-base: false
 
-      - name: Confirm environment setup
+      - name: Create Conda Env from file
         shell: bash -l {0}
         run: |
-          conda info --envs
-          which python
-          python --version
-          pip show mlflow
-
-      - name: Install MLflow explicitly (safety)
-        shell: bash -l {0}
-        run: |
-          pip install mlflow
+          conda env create -f conda.yaml
+          conda activate iris_env
 
       - name: Run MLflow Project
         shell: bash -l {0}
         run: |
+          conda activate iris_env
           mlflow run .
 
       - name: Upload Artifacts
