--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Mambaforge (Miniconda alternative)
+      - name: Set up Mambaforge (stable version, no 404)
         uses: conda-incubator/setup-miniconda@v2
         with:
-          auto-activate-base: false
           miniforge-variant: Mambaforge
-          miniforge-version: latest
+          miniforge-version: 23.11.0-0  # <--- versi stabil, no 404
+          auto-activate-base: false
+          use-mamba: true
 
-      - name: Create Conda Environment with mamba
+      - name: Create Conda Environment
         shell: bash -l {0}
         run: |
           mamba env create -f conda.yaml
